# coma

./: .clang-format  CMakeLists.txt  README.md
benchmark/: BM_CMTM.cpp  CMakeLists.txt
data/: clang10_0_0_bench.csv  compiler_tests.xlsx  gcc9_3_0_bench.csv  msvc19_28_bench.csv
doc/: Doxyfile.extra.in
example/: CMakeLists.txt  simple_example.cpp
include/: CMakeLists.txt
include/coma/: CMTM.hpp  Core  Storage.hpp  assert.hpp  block_matrix_defs.hpp  defs.hpp  format.hpp  forward_declare.hpp  lie_algebra.hpp  map.hpp  math_utils.hpp  operators.hpp  spatial_algebra.hpp  spatial_vector.hpp  typechecks.hpp
test/: CMakeLists.txt  cmtm_test.cpp  lie_algebra_test.cpp  lie_map_test.cpp  macros.hpp  spatial_algebra_test.cpp  spatial_vector_test.cpp  utils_test.cpp
